= Change Log


== 0.4
* Open a specific wave immediately by clicking a wave in the menu

== 0.3 (2009-10-21)
* BUG FIX: show "x" in case of inaccesible ruby path
* BUG FIX: Clicking OK button will not save a value in the focused text field to user default (press enter key is OK).
* status item icon (four color "W")
* show title and unread blip count of waves as menu item like gmail notifier

== 0.2 (2009-10-20)
* Added README, CHANGELOG and TODO
* menu item: Go to Inbox
* moderate interval time from 1 min to 5 min.
* advanced preferences: path to ruby

== 0.1 (2009-10-18)
* The first release