@@ -1,7 +1,6 @@
 = TODO
 
-== 0.4
-* display "Checked N min ago" biside "Check Now" like "Google Notifier"
+== 0.5
 
 == someday/maybe
 * checking for online members
