@@ -3,6 +3,7 @@
 
 == 0.4
 * Open a specific wave immediately by clicking a wave in the menu
+* Display "Checked N min ago" biside "Check Now" like "Google Notifier"
 
 == 0.3 (2009-10-21)
 * BUG FIX: show "x" in case of inaccesible ruby path
